CloudAlpacas/salesforce/main/default/objects/BulkMessage__c/fields/Digital_Content__c.field-meta.xml
<CustomField>
    <fullName>Digital_Content__c</fullName>
    <description>External Id of the SMSContent / WhatsAppContent referenced (polymorphic; held as text).</description>
    <label>Digital Content</label>
    <length>80</length>
    <type>Text</type>
</CustomField>