CloudAlpacas/salesforce/main/default/objects/BulkMessage__c/fields/Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>Market_Segment__c</fullName>
    <description>External Id of the Data Cloud Market Segment this send targeted.</description>
    <label>Market Segment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>